Corrected layout issues with filter UI component
Updated filter UI component JavaScript
Included filtering as part of card PIC-249

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/public/stylesheets/app/_overrides.scss
+++ b/public/stylesheets/app/_overrides.scss
@@ -9,3 +9,9 @@
 .moj-pagination__results {
   @extend .govuk-body;
 }
+
+body.js-enabled {
+  .moj-js-hidden {
+    @include govuk-visually-hidden;
+  }
+}
