--- a/views/partials/layout.njk
+++ b/views/partials/layout.njk
@@ -29,7 +29,7 @@
 <body class="govuk-template__body">
 
 <script>
-  document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled')
+  document.body.classList.add('js-enabled')
 </script>
 
 <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
