--- a/views/components/filter/template.njk
+++ b/views/components/filter/template.njk
@@ -64,7 +64,7 @@
         <div class="pac-selected-filters{% if not hasSelected %} moj-js-hidden{% endif %}">
             <p class="govuk-body govuk-!-margin-bottom-0">
                 <span class="govuk-!-font-weight-bold">Applied filters</span>
-                <a href="#" id="reset-filters" class="govuk-body-s govuk-!-margin-left-2">Clear all</a></p>
+                <a href="#" id="reset-filters" class="govuk-link govuk-link--no-visited-state govuk-body-s govuk-!-margin-left-2">Clear all</a></p>
 
             {% for filter in params.filters %}
 
