--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -24,7 +24,7 @@
     {{ offences.push('</ol>') }}
   {% endif %}
   {{ tableData.rows.push([
-    { text: ('<a href="/case/' + caseData.caseno + '/details" class="govuk-link govuk-link--no-visited-state">' + caseData.def_name | escape + '</a>') | safe },
+    { text: ('<a href="/case/' + caseData.caseno + '/details" class="pac-defendant-link govuk-link govuk-link--no-visited-state">' + caseData.def_name | escape + '</a>') | safe },
     { text: ('<div>' + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge" style="">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ item.probationStatus + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + params.moment(item.previouslyKnownTerminationDate).format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
     { text: offences | join('') | safe },
     { text: caseData.listno },
