Updated README with instructions for Redis
Removed TODO
Corrected filter scroll behaviour

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/views/components/filter/template.njk
+++ b/views/components/filter/template.njk
@@ -81,8 +81,8 @@
                     <div class="pac-filters-applied">
                         {% for item in filter.items %}
                             {% if item.checked %}
-                                <div class="moj-filter__tag pac-filter__tag"
-                                     data-controls="checkbox-{{ filter.id }}-{{ loop.index }}">{{ item.label }}</div>
+                                <button class="moj-filter__tag pac-filter__tag" type="button"
+                                     data-controls="checkbox-{{ filter.id }}-{{ loop.index }}">{{ item.label }}</button>
                             {% endif %}
                         {% endfor %}
                     </div>
