Included probation record appointment attendance route
Updated dependencies

Signed-off-by: Paul Massey <paul.massey@digital.justice.gov.uk>

--- a/views/partials/case-details.njk
+++ b/views/partials/case-details.njk
@@ -58,7 +58,7 @@
     {{ mojSubNavigation({
         label: 'Sub navigation',
         items: subNavItems
-    }) }}
+    }) if not hideSubnav }}
 
     {% block caseContent %}{% endblock %}
 
