--- a/views/case-summary-record.njk
+++ b/views/case-summary-record.njk
@@ -27,7 +27,7 @@
                 <h2 class="govuk-heading-m">Current orders ({{ activeOrders | length }})</h2>
                 {%- for order in activeOrders %}
                     {% if order.sentence %}
-                        <p class="govuk-body govuk-!-margin-bottom-0"><a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description }}</a></p>
+                        <p class="govuk-body govuk-!-margin-bottom-0"><a href="record/{{ order.convictionId }}" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description }}</a></p>
                         <p class="govuk-body govuk-!-margin-top-1 govuk-!-margin-bottom-0">{{ order.offences[0].detail.description }}</p>
                         <p class="govuk-hint govuk-!-margin-top-1 govuk-!-margin-bottom-0">Started on {{ params.moment(order.referralDate, 'YYYY-MM-DD').format('D MMM YYYY') }}</p>
 
@@ -65,7 +65,7 @@
                             {% if order.sentence %}
                             <tr class="govuk-table__row">
                                 <td class="govuk-table__cell govuk-!-width-two-thirds">
-                                    <p class="govuk-body govuk-!-margin-bottom-0"><a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description }}</a></p>
+                                    <p class="govuk-body govuk-!-margin-bottom-0"><a href="record/{{ order.convictionId }}" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description }}</a></p>
                                     <p class="govuk-hint govuk-!-margin-top-0 govuk-!-margin-bottom-0">{{ order.offences[0].detail.description }}</p>
                                 </td>
                                 <td class="govuk-table__cell govuk-table__cell--numeric govuk-!-width-one-third" style="vertical-align: bottom">
