--- a/views/case-summary-record.njk
+++ b/views/case-summary-record.njk
@@ -69,7 +69,7 @@
                                     <p class="govuk-hint govuk-!-margin-top-0 govuk-!-margin-bottom-0">{{ order.offences[0].detail.description }}</p>
                                 </td>
                                 <td class="govuk-table__cell govuk-table__cell--numeric govuk-!-width-one-third" style="vertical-align: bottom">
-                                    <p class="govuk-hint govuk-!-margin-bottom-0">Ended on {{ params.moment(order.referralDate, 'YYYY-MM-DD').format('D MMM YYYY') }}</p>
+                                    <p class="govuk-hint govuk-!-margin-bottom-0">Ended on {{ params.moment(order.terminatedDate, 'YYYY-MM-DD').format('D MMM YYYY') }}</p>
                                 </td>
                             </tr>
                             {% endif %}
