--- a/views/components/key-details-bar/template.njk
+++ b/views/components/key-details-bar/template.njk
@@ -1,23 +1,20 @@
 <section class="pac-key-details-bar" aria-label="Key details">
   <div class="pac-key-details-bar__key-details">
     <div class="pac-key-details-bar__top-block">
-      <h1 class="pac-key-details-bar__name">{% if params.accTitle %}<span class="govuk-visually-hidden">{{ params.accTitle }}</span>{% endif %}{{ params.title }}</h1>
-      {% if params.nino %}
-        <span class="pac-key-details-bar__nino">{{ params.nino }}</span>
+      <h1 class="pac-key-details-bar__name govuk-!-margin-right-6">{% if params.accTitle %}<span class="govuk-visually-hidden">{{ params.accTitle }}</span>{% endif %}{{ params.title }}</h1>
+      {% if params.crn | length %}
+        <span class="govuk-body pac-key-details-bar__divider"><strong>CRN: </strong>{{ params.crn }}</span>
       {% endif %}
-      {% if params.alerts | length %}
-        {% for alert in params.alerts %}
-          <span class="pac-key-details-bar__status govuk-!-margin-left-2" role="status">
-            <span class="govuk-visually-hidden">{{ alert.description }} </span>{{ alert.title }}
-          </span>
-        {% endfor %}
+      {% if params.pnc %}
+        <span class="govuk-body pac-key-details-bar__divider"><strong>PNC: </strong>{{ params.pnc }}</span>
       {% endif %}
     </div>
     <div class="pac-key-details-bar__bottom-block">
-      {% if params.information | length %}
-        {% for item in params.information %}
-          <span class="govuk-body govuk-!-margin-right-6">{{ item }}</span>
-        {% endfor %}
+      {% if params.probationStatus %}
+        <span class="govuk-body pac-key-details-bar__divider"><strong>Probation status: </strong>{{ params.probationStatus }}{% if params.breach  %} (Breach){% endif %}</span>
+      {% endif %}
+      {% if params.dob %}
+        <span class="govuk-body pac-key-details-bar__divider"><strong>Date of birth: </strong>{{ params.dob }}</span>
       {% endif %}
     </div>
   </div>
