--- a/public/stylesheets/app/_key-details.scss
+++ b/public/stylesheets/app/_key-details.scss
@@ -55,17 +55,23 @@
   }
 
   &__name {
-    @include govuk-font(24);
+    @include govuk-font(27);
     font-weight: 700;
     line-height: 1.11111;
     margin: 0 10px 0 0;
     margin-inline-start: 0;
     display: inline-block;
     @media(max-width: 670px) {
-      @include govuk-font(24);
+      @include govuk-font(27);
       line-height: 1.04167;
       float: left;
       margin: 0 5px 0 0;
     }
+  }
+
+  &__divider:not(:last-child) {
+    border-right: 1px solid rgba(255, 255, 255, 0.3);
+    margin: 0 15px 0 0;
+    padding: 0 15px 0 0;
   }
 }
