--- a/views/case-summary.njk
+++ b/views/case-summary.njk
@@ -7,7 +7,7 @@
 
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
-            <h1 class="govuk-heading-l">Case Details</h1>
+            <h1 class="govuk-heading-l">Case details</h1>
         </div>
     </div>
 
@@ -16,74 +16,94 @@
 
             <h2 class="govuk-heading-m">Appearance</h2>
             <p class="govuk-body">Court {{ data.courtRoom }}, {{ data.session | lower }} session,
-                {{ params.moment(data.sessionStartTime).format('dddd Do MMMM') }} ({{ data.caseData.listno }} listing).</p>
+                {{ params.moment(data.sessionStartTime).format('dddd Do MMMM') }} ({{ data.caseData.listno }}
+                listing).</p>
 
-            <h2 class="govuk-heading-m">Offences</h2>
+            <h2 class="govuk-heading-m govuk-!-margin-top-9">Offences</h2>
 
-            {% if data.caseData.offences.offence.title %}
-                <p class="govuk-body govuk-!-font-weight-bold">{{ data.caseData.offences.offence.title }}</p>
-                <p class="govuk-body govuk-!-margin-bottom-0">{{ data.caseData.offences.offence.sum }}</p>
-                <p class="govuk-hint govuk-!-margin-top-1 govuk-!-margin-bottom-8">{{ data.caseData.offences.offence.as }}</p>
-                {% elif data.caseData.offences.offence | length %}
+
+            {% set offences = [] %}
+            {% for offence in data.caseData.offences.offence %}
+                {{ offences.push(data.caseData.offences.offence) | length }}
+            {% endfor %}
+            {% if offences | length < 2 %}
                 {% for offence in data.caseData.offences.offence %}
                     <p class="govuk-body govuk-!-font-weight-bold">{{ offence.title }}</p>
                     <p class="govuk-body govuk-!-margin-bottom-0">{{ offence.sum }}</p>
-                    <p class="govuk-caption-m govuk-!-margin-top-1 govuk-!-margin-bottom-8">{{ offence.as }}</p>
+                    <p class="govuk-caption-m govuk-!-margin-top-3">{{ offence.as }}</p>
                 {% endfor %}
+                {% elif offences | length > 1 %}
+                <div class="govuk-accordion" data-module="govuk-accordion">
+                    {% for offence in data.caseData.offences.offence %}
+                        <div class="govuk-accordion__section ">
+                            <div class="govuk-accordion__section-header">
+                                <h2 class="govuk-accordion__section-heading">
+                                    <span class="govuk-accordion__section-button govuk-!-font-size-19">{{ offence.title }}</span>
+                                </h2>
+                            </div>
+                            <div class="govuk-accordion__section-content">
+                                <p class="govuk-body govuk-!-margin-bottom-0">{{ offence.sum }}</p>
+                                <p class="govuk-caption-m govuk-!-margin-top-3">{{ offence.as }}</p>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
             {% endif %}
 
-                <h2 class="govuk-heading-m">
-                    Personal details from police
-                </h2>
 
-                <dl class="govuk-summary-list govuk-summary-list--no-border">
-                    <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
-                            Name
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            {{ caseData.def_name }}
-                        </dd>
-                    </div>
-                    <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
-                            Gender
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            {% if caseData.def_sex === "F" %}Female{% elif caseData.def_sex === "M" %}Male{% else %}Unknown{% endif %}
-                        </dd>
-                    </div>
-                    <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
-                            Date of birth
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            {{ params.moment(caseData.def_dob, 'DD-MM-YYYY').format('D MMMM YYYY') }} ({{ params.moment().diff(params.moment(caseData.def_dob, 'DD-MM-YYYY'), 'years') }} years old)
-                        </dd>
-                    </div>
-                    <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
-                            Address
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            {%- set address = caseData.def_addr -%}
-                            {% if address.line1 %}{{ address.line1 }}<br/>{% endif %}
-                            {% if address.line2 %}{{ address.line2 }}<br/>{% endif %}
-                            {% if address.line3 %}{{ address.line3 }}<br/>{% endif %}
-                            {% if address.line4 %}{{ address.line4 }}<br/>{% endif %}
-                            {% if address.line5 %}{{ address.line5 }}<br/>{% endif %}
-                            {% if address.pcode %}{{ address.pcode | upper }}{% endif %}
-                        </dd>
-                    </div>
-                    <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
-                            Nationality
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            {{ caseData.nationality_1 or "Unknown" }}{{ " / " + caseData.nationality_2 if caseData.nationality_2 }}
-                        </dd>
-                    </div>
-                </dl>
+            <h2 class="govuk-heading-m govuk-!-margin-top-9">
+                Personal details from police
+            </h2>
+
+            <dl class="govuk-summary-list govuk-summary-list--no-border">
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Name
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        {{ caseData.def_name }}
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Gender
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        {% if caseData.def_sex === "F" %}Female{% elif caseData.def_sex === "M" %}Male{% else %}Unknown{% endif %}
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Date of birth
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        {{ params.moment(caseData.def_dob, 'DD-MM-YYYY').format('D MMMM YYYY') }}
+                        ({{ params.moment().diff(params.moment(caseData.def_dob, 'DD-MM-YYYY'), 'years') }} years old)
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Address
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        {%- set address = caseData.def_addr -%}
+                        {% if address.line1 %}{{ address.line1 }}<br/>{% endif %}
+                        {% if address.line2 %}{{ address.line2 }}<br/>{% endif %}
+                        {% if address.line3 %}{{ address.line3 }}<br/>{% endif %}
+                        {% if address.line4 %}{{ address.line4 }}<br/>{% endif %}
+                        {% if address.line5 %}{{ address.line5 }}<br/>{% endif %}
+                        {% if address.pcode %}{{ address.pcode | upper }}{% endif %}
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Nationality
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        {{ caseData.nationality_1 or "Unknown" }}{{ " / " + caseData.nationality_2 if caseData.nationality_2 }}
+                    </dd>
+                </div>
+            </dl>
 
         </div>
         <div class="govuk-grid-column-one-third">
